lvl_junior/07_Lifehacks/077-step1/02_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-http-server
  namespace: debug-1
spec:
  strategy: 
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: go-http-server
  template:
    metadata:
      labels:
        app: go-http-server
    spec:
      containers:
      - name: server
        image: bdv21/http-server:0.0.2-any
        ports:
        - containerPort: 8080
          name: web
